Migrated rest template calls to internal api client calls (#330)
* Migrated rest template calls to internal api client calls